--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -6,7 +6,7 @@
     <section class="home-hero">
         <header class="center">
             <h1>
-                We are creating a community where 
+                String for a world where
                 <span class="invert">startups</span>
                 are owned by those who 
                 <span class="invert">built them</span>
@@ -86,46 +86,47 @@
                     <p class="subtitle-medium">Each member of Sparc defines their own role, as they know their skills best. And they own that role completely, including every decision it requires. They are the trusted expert by default.</p>
                 </div>
             </div>
-            <div class="project-wrapper">
-                <div class="left">
-                    <div class="section-tag project-tag">
-                        <p class="subtitle-medium">Sparc Projects</p>
-                    </div>
-                    <h5 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
-                    <a class="link-large" href="/projects">View All Projects <img src="images/icons/Icon Right.svg" /></a>
+        </section>
+
+        <section class="projects">
+            <div class="left">
+                <div class="section-tag project-tag">
+                    <p class="subtitle-medium">Sparc Projects</p>
                 </div>
-                <div class="right">
-                    <div class="card-wrapper">
-                        <ProjectCard 
-                            Title="KodeKit" 
-                            Status="Live"
-                            ImgUrl="/images/Laptop.png"
-                            Link="https://www.kodekit.io/"
-                            Github="https://github.com/sparc-coop/kodekit"
-                            Content="@KodekitText"
-                            ChannelId="kodekit-content"/>
-                        <ProjectCard
-                            Title="Ibis" 
-                            Status="Live"
-                            ImgUrl="/images/ibis.png"
-                            Link="https://ibis.chat"
-                            Github="https://github.com/sparc-coop/ibis"
-                            Content="@IbisText"
-                            ChannelId="ibis-content"/>
-                        <ProjectCard
-                            Title="Law of 100" 
-                            Status="Live"
-                            ImgUrl="/images/lawof100.png"
-                            Link="https://lawof100.co/"
-                            Github="https://github.com/sparc-coop/law-of-100"
-                            Content="@LawofText"
-                            ChannelId="lawof100-content"/>
-                    </div>
+                <h5 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
+                <a class="link-large" href="/projects">View All Projects <img src="images/icons/Icon Right.svg" /></a>
+            </div>
+            <div class="projects-wrapper right">
+                <div class="card-wrapper">
+                    <ProjectCard 
+                        Title="KodeKit" 
+                        Status="Live"
+                        ImgUrl="/images/Laptop.png"
+                        Link="https://www.kodekit.io/"
+                        Github="https://github.com/sparc-coop/kodekit"
+                        Content="@KodekitText"
+                        ChannelId="kodekit-content"/>
+                    <ProjectCard
+                        Title="Ibis" 
+                        Status="Live"
+                        ImgUrl="/images/ibis.png"
+                        Link="https://ibis.chat"
+                        Github="https://github.com/sparc-coop/ibis"
+                        Content="@IbisText"
+                        ChannelId="ibis-content"/>
+                    <ProjectCard
+                        Title="Law of 100" 
+                        Status="Live"
+                        ImgUrl="/images/lawof100.png"
+                        Link="https://lawof100.co/"
+                        Github="https://github.com/sparc-coop/law-of-100"
+                        Content="@LawofText"
+                        ChannelId="lawof100-content"/>
                 </div>
             </div>
         </section>
 
-        <section class="resources">
+        <section class="community">
             <header>
                 <div class="section-tag community-tag"><p class="subtitle-medium">Sparc Community</p></div>
                 <h5 class="subtitle-large semi-bold">
