--- a/SparcFeatures/Projects/ProjectCard.scss
+++ b/SparcFeatures/Projects/ProjectCard.scss
@@ -3,9 +3,8 @@
 .project-card {
     margin-bottom: 30px;
     padding: 0px;
-    max-width: 100%;
     width: 589px;
-    height: 516px;
+    height: auto;
 
     .card-header {
         height: 30px;
