--- a/SparcFeatures/App.Assets.scss
+++ b/SparcFeatures/App.Assets.scss
@@ -32,7 +32,6 @@ body {
 
     .subtitle-large {
         font-size: 32px;
-        max-width: 592px;
     }
 
     p, a, button {
@@ -262,6 +261,7 @@ body {
 
 .homepage section {
     padding: 100px 0;
+    margin: 0 auto;
 }
 
 //tags
